Fixed the title, again. Fixed comments so now there's a break in between each of them. Changed the color on the rest of the links.

--- a/public-file-upload/public/main.css
+++ b/public-file-upload/public/main.css
@@ -32,6 +32,8 @@ a:hover {
 
 #addPhotoButton{
   background-color: #000000;
+  font-weight: bolder;
+  font-family: 'Julius Sans One', Arial;
   font-size: 30px;
 }
 #addPhotoButton1{
@@ -73,12 +75,13 @@ a:hover {
   text-align: center;
 }
 #titlePart{
-  font-family:"eater";
-  font-size: 40px;
+padding-top: 30px;
+  font-family:'Julius Sans One', Arial;
+  font-size: 25px;
 }
 
 #signed-in, #not-signed-in{
-  font-size: 20px;
+  font-size: 15px;
   font-family: 'Julius Sans One', Arial;
   font-weight: bold;
 }
